<resources>
    <string name="app_name">ZhongBaoYi</string>
    <string name="scan_tip">please put the QR code in the viewfinder and scan</string>
    <string name="scan_retry">QR code scanning error, please rescan</string>
    <string name="scan_title">scan</string>
    <string name="xlistview_header_hint_normal">pull-down refresh</string>
    <string name="xlistview_header_hint_ready">release refresh data</string>
    <string name="xlistview_header_hint_loading">is loading...</string>
    <string name="xlistview_header_last_time">last update time: </string>
    <string name="xlistview_footer_hint_normal">view more</string>
    <string name="xlistview_footer_hint_ready">release uploads more</string>
    <string name="pull_to_refresh_pull_label">pull-down refresh</string>
    <string name="pull_to_refresh_release_label">pull-down refresh</string>
    <string name="pull_to_refresh_refreshing_label">is refreshing\u2026</string>
    <string name="pull_to_refresh_footer_release_label">pulls more</string>
    <string name="pull_to_refresh_footer_pull_label">pulls more</string>
    <string name="pull_to_refresh_footer_refreshing_label">is loading\u2026</string>
    <string name="act_no_data_load">has no data to load! </string>
    <string name="tab_home">Homepage</string>
    <string name="tab_category">Category</string>
    <string name="tab_message">Message</string>
    <string name="tab_periphery">Around</string>
    <string name="tab_cart">Cart</string>
    <string name="tab_personal">My</string>
    <string name="previouspage">previouspage</string>
    <string name="nextpage">nextpage</string>
    <string name="lastpage">lastpage</string>
    <string name="act_no_data">has no data!  </string>
    <string name="act_net_error">network connection failed!  </string>
    <string name="nostop">no shop</string>
    <string name="act_waiting">waiting... </string>
    <string name="act_stock">inventory: </string>
    <string name="act_a">a</string>
    <string name="act_no_more">cannot exceed the maximum number of products</string>
    <string name="act_less_one">purchase quantity cannot be less than 1 piece</string>
    <string name="act_loading">loading...</string>
    <string name="act_del_success">deleted successfully! </string>
    <string name="act_del_fail">delete failed! </string>
    <string name="address_manage">address management</string>
    <string name="selector">option</string>
    <string name="update">modify</string>
    <string name="del">delete</string>
    <string name="yuan">RMB</string>
    <string name="province">province</string>
    <string name="city">city</string>
    <string name="area">area/county</string>
    <string name="province_not_choice">did not select province</string>
    <string name="city_not_choice">did not select city</string>
    <string name="area_not_choice">did not select area/county</string>
    <string name="see_map">check the map</string>
    <string name="all_order">all orders</string>
    <string name="all_classifying">all classifying</string>
    <string name="refresh">refresh ===</string>
    <string name="total">total</string>
    <string name="stop_empty">no goods</string>
    <string name="balance">settlement</string>
    <string name="cart">shopping cart</string>
    <string name="please_choose_goods">please select goods</string>
    <string name="update_success">modified successfully! </string>
    <string name="updating">modifying...</string>
    <string name="update_password">change password</string>
    <string name="perdata">profile</string>
    <string name="virtualorders">virtualorder</string>
    <string name="servicelorders">service order</string>
    <string name="serviceorders">service order</string>
    <string name="old_password_not">old password is not filled!  </string>
    <string name="new_password_not">new password is not filled! </string>
    <string name="repeat_password_not">repeat password unfilled! </string>
    <string name="new_password_length_not_6">New password is no longer than 6! </string>
    <string name="new_password_length_not_24">New password is no longer than 24!</string>
    <string name="two_password_not_consistent">The password entered is inconsistent!  </string>
    <string name="evaluation_of_success">Evaluation successful!  </string>
    <string name="evaluation_of_fail">Evaluation failed! </string>
    <string name="evaluation">evaluation </string>
    <string name="add_success">added successfully! </string>
    <string name="update_fail">Modification failed! </string>
    <string name="add_fail">Add failed! </string>
    <string name="new_address">Add address </string>
    <string name="update_address"> modify the address </string>
    <string name="contact_empty">contact cannot be empty</string>
    <string name="location_empty">location cannot be empty</string>
    <string name="detail_empty">Detailed address cannot be empty</string>
    <string name="phone_empty">Mobile or phone cannot be empty</string>
    <string name="edit">edit </string>
    <string name="virtual">virtual order </string>
    <string name="footprint">footprint </string>
    <string name="collectionfcf">Collection baby </string>
    <string name="collectionfcf2">Collection store </string>
    <string name="collection_list">Favorites list </string>
    <string name="my_footprint">My footprints</string>
    <string name="buyer_orders">order management </string>
    <string name="reset_password"> reset password </string>
    <string name="username_empty">User name is not filled! </string>
    <string name="email_empty">email is not filled! </string>
    <string name="email_error">Please enter the correct email address! </string>
    <string name="goods_detail">Product details </string>
    <string name="goods_empty"> could not find this item, please select the product specification! </string>
    <string name="num_over"> the num of good over the stock! </string>
    <string name="storage_zero"> the storage is zero </string>
    <string name="goods_list">product list </string>
    <string name="operation_success">Operation succeeded! </string>
    <string name="operation_fail"> operation failed! </string>
    <string name="net_reconnect">The network connection failed, please reconnect! </string>
    <string name="goods_manage">Product Management </string>
    <string name="login_success">User login success </string>
    <string name="logging">Login....</string>
    <string name="password_empty">The password is not filled! </string>
    <string name="logout_fail">Logout failed! </string>
    <string name="safe_exit"> safe exit....</string>
    <string name="more">more </string>
    <string name="tomore">more></string>
    <string name="clean_cache">Clear the cache....</string>
    <string name="location">location </string>
    <string name="my_shop">My Store</string>
    <string name="my_shop2">My Store</string>
    <string name="shop_data">store information </string>
    <string name="confirm">OK</string>
    <string name="m100">100 meters </string>
    <string name="m200">200 meters </string>
    <string name="m300">300 meters </string>
    <string name="m400">400 meters </string>
    <string name="m500">500 meters </string>
    <string name="m600">600 meters </string>
    <string name="m700">700 meters </string>
    <string name="m800">800 meters </string>
    <string name="m900">900 meters </string>
    <string name="m1000">1000 meters </string>
    <string name="m1000_more">1000 meters or more </string>
    <string name="shop_position_empty">The store has no location information! </string>
    <string name="no_position">no location</string>
    <string name="tip">tip </string>
    <string name="no_position_get">No location information, please get the current location! </string>
    <string name="cancel">Cancel </string>
    <string name="commit_success">Submit successfully! </string>
    <string name="upload_fail">Please upload the correct information! </string>
    <string name="commit_fail">submission failed </string>
    <string name="uploading">Uploading data....</string>
    <string name="individual_settled">personal resident </string>
    <string name="new_small">Xiaoxin</string>
    <string name="wh">Wanhui</string>
    <string name="shop_name_empty">The store name is not filled! </string>
    <string name="province_empty">No provinces selected! </string>
    <string name="area_empty">No area selected! </string>
    <string name="errr">Please fill in the complete information </string>
    <string name="downtown_empty"> did not choose the city! </string>
    <string name="detail_is_empty">The detailed address is not filled! </string>
    <string name="contact_is_empty">contact name is not filled! </string>
    <string name="phone_is_empty">contact phone is not filled! </string>
    <string name="phone_is_empty2">Contact Phone: </string>
    <string name="phone_is_empty3">E-mail: </string>
    <string name="phone_is_empty4">Real Name: </string>
    <string name="phone_is_firmempty4"> business license number: </string>
    <string name="phone_is_empty5">Identity ID : </string>
    <string name="phone_is_firmempty5">Business scope: </string>
    <string name="phone_is_empty6">Scan upload: </string>
    <string name="phone_is_empty7"> Alipay name : </string>
    <string name="phone_is_firmempty7">Bank account name : </string>
    <string name="phone_is_empty8"> Alipay account number : </string>
    <string name="phone_is_firmempty8">Bank account number : </string>
    <string name="phone_is_firmempty82">sub-branch name: </string>
    <string name="phone_is_firmempty83">Sub-branch number: </string>
    <string name="phone_is_firmempty84">Bank location: </string>
    <string name="phone_is_empty9">Business account number : </string>
    <string name="phone_is_firmempty9">Store Name : </string>
    <string name="phone_is_empty10">Regional Agent: </string>
    <string name="phone_is_empty11">Store Level : </string>
    <string name="phone_is_empty12">Store Category : </string>
    <string name="phone_is_empty13">Business Category: </string>
    <string name="email_is_empty">Mailbox is not filled! </string>
    <string name="name_is_empty">Name is not filled! </string>
    <string name="id_is_empty">Identity card is not filled! </string>
    <string name="choose">Please select </string>
    <string name="select_id_scan">Please select ID card scan! </string>
    <string name="alipay_name_is_empty"> Alipay name is not filled! </string>
    <string name="account_number_is_empty"> Alipay account is not filled! </string>
    <string name="merchant_name_is_empty">Business name is not filled! </string>
    <string name="merchant_account_is_empty">Business account is not filled! </string>
    <string name="shop_level_is_empty"> did not choose the store level! </string>
    <string name="shop_category_is_empty"> did not choose store classification! </string>
    <string name="select_shop_level_1">Please select the store business category level classification! </string>
    <string name="select_shop_level_2">Please select the second category of the store business category! </string>
    <string name="select_shop_level_3">Please select the three-category classification of the store management category! </string>
    <string name="select_picture_source">Select image source </string>
    <string name="media_lib">media library</string>
    <string name="take_picture">photograph </string>
    <string name="update_address_success">Change address successfully! </string>
    <string name="commit_order_success">Submit order successfully! </string>
    <string name="myorder">My order</string>
    <string name="distribution_center4">draw </string>
    <string name="member_centre1">Points</string>
    <string name="member_centre2">Freeze</string>
    <string name="member_centre3">red envelope</string>
    <string name="member_centre4"> vouchers</string>
    <string name="member_centre5"> balance</string>
</resources>