<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_bg"
                android:padding="10dp">

                <com.aite.a.view.CircleImageView
                    android:id="@+id/personal_iv_avatr"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/personal_tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/personal_iv_avatr"
                    android:layout_alignBottom="@+id/personal_iv_avatr"
                    android:layout_marginEnd="@dimen/dp_40"
                    android:layout_toRightOf="@+id/personal_iv_avatr"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="nananananan"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_more"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentRight="true"
                    android:padding="4dp"
                    android:src="@drawable/me_setting" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="我的钱包"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp_6">

                <LinearLayout
                    android:id="@+id/wallet_balance_ll"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="23443.35"
                        android:textColor="#F33"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:text="@string/member_centre5"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wallet_freeze_ll"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_freeze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="23443.35"
                        android:textColor="#F33"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:text="@string/member_centre2"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wallet_integral_ll"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_integral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="23443.35"
                        android:textColor="#F33"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:text="@string/member_centre1"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wallet_vouchers_ll"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_voucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="23443.35"
                        android:textColor="#F33"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:text="@string/member_centre4"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wallet_present_ll"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_50"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_redenvelope"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="23443.35"
                        android:textColor="#F33"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_6"
                        android:text="@string/member_centre3"
                        android:textColor="@color/text_color"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_withdrawals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/distribution_withdrawals2"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp"
                    android:text="@string/distribution_center4"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_allorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_wodedingdan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/myorder"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/nextpager"
                    android:visibility="gone" />
            </RelativeLayout>

            <!-- 我的订单 -->
            <com.aite.a.view.MyGridView
                android:id="@+id/mgv_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:numColumns="4"
                android:scrollbars="none"></com.aite.a.view.MyGridView>
            <!-- 菜单-->
            <com.aite.a.view.MyListView
                android:id="@+id/mgv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:divider="@color/transparent"
                android:listSelector="@color/transparent"></com.aite.a.view.MyListView>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/round_background_white"
                android:gravity="left|center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="猜你喜欢"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/guess_like_recy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spanCount="2" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
